--- a/app/src/main/res/layout/activity_fun_facts.xml
+++ b/app/src/main/res/layout/activity_fun_facts.xml
@@ -6,7 +6,8 @@
     android:layout_height="match_parent"
     android:background="#51b46d"
     android:padding="50dp"
-    tools:context=".FunFactsActivity">
+    tools:context=".FunFactsActivity"
+    android:id="@+id/funFactsLayout">
 
     <TextView
         android:id="@+id/tvSubtitle"
